--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,18 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel ="text/stylesheet" src ="styles/style.css">
-    <title>Project 2</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" name="viewport"
+    content="width=device-width, initial-scale=1.0" />>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link type="text/css" rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" media="screen,projection" />
+  <link rel="text/stylesheet" src="styles/style.css">
+  <title>Project 2</title>
 </head>
+
 <body>
+  <nav class="light-blue lighten-1" role="navigation">
+    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Sell Your Stuff!</a>
+      <ul class="right hide-on-med-and-down">
+        <li><a href="#">Navbar</a></li>
+      </ul>
 
-    <div class="parallax-container">
-      <div class="parallax"><img src="images/parallax1.jpg"></div>
+      <ul id="nav-mobile" class="sidenav">
+        <li><a href="#">Navbar Link</a></li>
+      </ul>
+      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     </div>
+  </nav>
+  <div class="container">
+    <div class="img"><img src="img/50-Beautiful-and-Minimalist-Presentation-Backgrounds-07.jpg"></div>
+  </div>
 
-    {{{body}}}
+  {{{body}}}
+
+  <footer class="page-footer orange">
+    <div class="container">
+      <div class="row">
+        <div class="col l6 s12">
+          <h5 class="white-text">Company Bio</h5>
+          <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our
+            full time job. Any amount would help support and continue development on this project and is greatly
+            appreciated.</p>
+        </div>
+      </div>
+    </div>
+    <div class="footer-copyright">
+      <div class="container">
+      </div>
+    </div>
+  </footer>
+
+  <script type="text/javascript" src="js/materialize.min.js"></script>
 </body>
+
 </html>
