--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -2,15 +2,39 @@
     box-sizing: border-box;
 }
 
-.icon-block {
-    padding: 0 15px;
+body {
+    background-image: url(../img/50-Beautiful-and-Minimalist-Presentation-Backgrounds-07.jpg);
 }
 
-.icon-block .material-icons {
-    font-size: inherit;
+.carousel {
+    width: 100%;
+    height: 300px;
 }
 
-.container {
-    background-image: url("img/50-Beautiful-and-Minimalist-Presentation-Backgrounds-07.jpg");
-    background-image: cover;
+.navbar {
+    background-color: #ccc;
+}
+
+.btn {
+    padding-left: 60px;
+}
+
+.form {
+    width: 70%;
+    position: absolute;
+    left: 50%;
+    transform: translatex(-50%);
+}
+
+.footer {
+    width: 100%;
+    background-color: #ccc;
+}
+
+.navbar-center {
+    text-align: center;
+    position: absolute;
+    left: 50%;
+    transform: translatex(-50%);
+    line-height: 45px;
 }
