--- a/views/sign-up.handlebars
+++ b/views/sign-up.handlebars
@@ -36,19 +36,19 @@
                   <label for="username" class="col-4 col-form-label">User Name*</label>
                   <div class="col-8">
                     <input id="username" name="username" placeholder="Username" class="form-control here"
-                      required="required" type="text">
+                      required="required" type="text" id="username">
                   </div>
                 </div>
                 <div class="form-group row">
                   <label for="name" class="col-4 col-form-label">First Name</label>
                   <div class="col-8">
-                    <input id="name" name="name" placeholder="First Name" class="form-control here" type="text">
+                    <input id="name" name="name" placeholder="First Name" class="form-control here" type="text" id="fname">
                   </div>
                 </div>
                 <div class="form-group row">
                   <label for="lastname" class="col-4 col-form-label">Last Name</label>
                   <div class="col-8">
-                    <input id="lastname" name="lastname" placeholder="Last Name" class="form-control here" type="text">
+                    <input id="lastname" name="lastname" placeholder="Last Name" class="form-control here" type="text" id="lname">
                   </div>
                 </div>
 
@@ -64,14 +64,14 @@
                   <label for="email" class="col-4 col-form-label">Email*</label>
                   <div class="col-8">
                     <input id="email" name="email" placeholder="Email" class="form-control here" required="required"
-                      type="text">
+                      type="text" id= "email">
                   </div>
                 </div>
    
                 <div class="form-group row">
                   <label for="newpass" class="col-4 col-form-label">New Password</label>
                   <div class="col-8">
-                    <input id="newpass" name="newpass" placeholder="New Password" class="form-control here" type="text">
+                    <input id="newpass" name="newpass" placeholder="New Password" class="form-control here" type="text" id="password">
                   </div>
                 </div>
                 <div class="form-group row">
