--- a/views/layouts/template.handlebars
+++ b/views/layouts/template.handlebars
@@ -42,5 +42,5 @@
 
 </body>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="js/dashboard.js"></script>
+<script src="/js/template.js"></script>
 </html>
