--- a/views/layouts/template.handlebars
+++ b/views/layouts/template.handlebars
@@ -23,67 +23,73 @@
 </head>
 
 <body>
-
   <div class="container">
-  
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#"></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
 
-      <nav>
-        <div class="navbar">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Barter</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Profile</a>
-            </li>
-          </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-          </form>
-        </div>
+    <header class="header">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <nav>
+          <div class="navbar">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="#">Barter</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Profile</a>
+              </li>
+            </ul>
+
+            <form class="form-inline my-2 my-lg-0">
+              <input class="form-control mr-sm-2" type="search" placeholder="" aria-label="Search">
+              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
+          </div>
+        </nav>
       </nav>
+    </header>
+
+
+    {{{body}}}
+
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+
+    <div class="form">
+      <input class="form-control form-control-lg" type="text" placeholder=".form-control-lg">
+      <input class="form-control" type="text" placeholder="Default input">
+      <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm">
+    </div>
+
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+
+
+    <div class="row">
+      <div class="col-md-12">
+        <footer class="ftr">
+          <ul class="list-group list-group-horizontal">
+            <li class="list-group-item">link 1</li>
+            <li class="list-group-item">link 2</li>
+            <li class="list-group-item">link 3</li>
+          </ul>
+        </footer>
+      </div>
+    </div>
 
   </div>
-
-  {{{body}}}
-
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-
-  <div class="form">
-  <input class="form-control form-control-lg" type="text" placeholder=".form-control-lg">
-  <input class="form-control" type="text" placeholder="Default input">
-  <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm">
-  </div>
-
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <footer class="footer ftr navbar-center">
-
-    <ul class="list-group list-group-horizontal navbar-center">
-      <li class="list-group-item">link 1</li>
-      <li class="list-group-item">link 2</li>
-      <li class="list-group-item">link 3</li>
-    </ul>
-
-  </footer>
-
-
 </body>
 
 </html>
