--- a/views/index.html
+++ b/views/index.html
@@ -37,7 +37,8 @@
                                 <a class="nav-link" href="/login"> Login   </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/logout"> Logout</a>
+                                <a class="nav-link" href="/profile"> Profile</a> 
+                                </li>
 
                 </nav>
     </header>
