--- a/views/signup.html
+++ b/views/signup.html
@@ -38,7 +38,8 @@
                                 <a class="nav-link" href="/login"> Login   </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/logout"> Logout</a>
+                                <a class="nav-link" href="/profile"> Profile</a> 
+                                </li>
 
                 </nav>
     </header>
@@ -86,9 +87,9 @@
                                     </div>
 
                                     <div class="form-group row">
-                                        <label for="newpass" class="col-4 col-form-label">New Password</label>
+                                        <label for="password" class="col-4 col-form-label">Password</label>
                                         <div class="col-8">
-                                            <input id="newpass" name="newpass" placeholder="New Password" class="form-control here" type="text">
+                                            <input id="password" name="password" placeholder="Password" class="form-control here" type="text">
                                         </div>
                                     </div>
                                     <div class="form-group row">
