--- a/views/barter.html
+++ b/views/barter.html
@@ -39,7 +39,7 @@
                                 <a class="nav-link" href="/login">Login</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/logout">Barter</a>
+                                <a class="nav-link" href="/barter">Barter</a>
                                 <div class="search">
                                     <button name="search" type="submit" class="btn btn-light">Search</button>
                                     <insert class="textarea"></insert>
