working on dashboard js

--- a/views/profile.html
+++ b/views/profile.html
@@ -99,27 +99,9 @@
                 </form>
                 <div id="havewant">
                     <p>Item Type</p>
-                <input type="radio" name="gender" value="have"> Have<br>
-                <input type="radio" name="gender" value="want"> Want<br></div>
-                <!-- <fieldset class="form-group">
-                    <div class="row">
-                        <legend class="col-form-label col-sm-2 pt-0">Item Type</legend>
-                        <div class="col-sm-10">
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="gridRadios" id="havewant1" value="option1" checked>
-                                <label class="form-check-label" for="gridRadios1">
-                              Have
-                            </label>
-                            </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="gridRadios" id="havewant2" value="option2">
-                                <label class="form-check-label" for="gridRadios2">
-                              Want
-                            </label>
-                            </div>
-                        </div>
-                    </div>
-                </fieldset> -->
+                    <input type="radio" name="have" value="have"> Have<br>
+                    <input type="radio" name="want" value="want"> Want<br>
+                </div>
                 <div class="form-group">
                     <label for="itemDescription">Item Description</label>
                     <textarea class="form-control" id="itemDescription" rows="3"></textarea>
@@ -131,29 +113,9 @@
                 </div>
             </form>
 
-
-
-
-
-
-
-
         </div>
 
-
-
-
-
-
-
-
-
-
-
-
     </div>
-
-
 
     <footer class="footer ftr navbar-center">
 
@@ -180,6 +142,7 @@
             </nav>
 
     </footer>
+    <script src="../public/js/dashboard.js" type="text.javascript"> </script>
 </body>
 
 </html>
