--- a/views/profile.html
+++ b/views/profile.html
@@ -20,6 +20,7 @@
     <title>Project Two</title>
 </head>
 
+
 <body>
 
 
@@ -108,7 +109,7 @@
                 </div>
                 <div class="form-group row">
                     <div class="col-sm-10">
-                        <button id="newItem" type="submit" class="btn btn-primary">Submit</button>
+                        <button id="newItem" name="submit" type="submit" class="btn btn-primary">Submit</button>
                     </div>
                 </div>
             </form>
@@ -142,7 +143,12 @@
             </nav>
 
     </footer>
-    <script src="../public/js/dashboard.js" type="text.javascript"> </script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
+    <script src="/js/dashboard.js" type="text/javascript"> </script>
 </body>
 
 </html>
