--- a/views/signup.html
+++ b/views/signup.html
@@ -88,7 +88,7 @@
                                     <div class="form-group row">
                                         <label for="newpass" class="col-4 col-form-label">New Password</label>
                                         <div class="col-8">
-                                            <input id="newpass" name="newpass" placeholder="New Password" class="form-control here" type="passwo">
+                                            <input id="newpass" name="newpass" placeholder="New Password" class="form-control here" type="password">
                                         </div>
                                     </div>
                                     <div class="form-group row">
@@ -137,7 +137,7 @@
                                           <span class="navbar-toggler-icon"></span>
                                         </button>
             <nav>
-                <div class="navbar">
+                <div class="navbar">cx
                     <ul class="navbar-nav mr-auto justify-content-center">
                         <li class="nav-item active">
                             <li class="nav-item">
@@ -153,6 +153,10 @@
             </nav>
 
     </footer>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="./js/signup.js"></script>
 </body>
 
