--- a/views/profile.html
+++ b/views/profile.html
@@ -119,28 +119,9 @@
             </form>
 
 
-
-
-
-
-
-
         </div>
 
-
-
-
-
-
-
-
-
-
-
-
     </div>
-
-
 
     <footer class="footer ftr navbar-center">
 
@@ -166,6 +147,11 @@
             </nav>
 
     </footer>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="./js/profile.js"></script>
 </body>
 
 </html>
