--- a/views/signup.html
+++ b/views/signup.html
@@ -5,10 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/style.css">
     <title>Project Two</title>
 </head>
@@ -22,24 +31,26 @@
 
             <nav class="navbar navbar-expand-lg navbar-light justify-content-end">
                 <a class="navbar-brand" href="#"></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                                          <span class="navbar-toggler-icon"></span>
-                                        </button>
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
                 <nav>
                     <div class="navbar">
                         <ul class="navbar-nav mr-auto">
                             <li class="nav-item active">
-                                <li class="nav-item">
-                                    <a class="nav-link" href="/">Home</a>
-                                </li>
-                                <a class="nav-link" href="/signup">Sign Up</a>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/">Home</a>
+                            </li>
+                            <a class="nav-link" href="/signup">Sign Up</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="/login">Login</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/profile"> Profile</a> 
-                                </li>
+                                <a class="nav-link" href="/profile"> Profile</a>
+                            </li>
 
                 </nav>
     </header>
@@ -63,38 +74,44 @@
                                     <div class="form-group row">
                                         <label for="username" class="col-4 col-form-label">User Name*</label>
                                         <div class="col-8">
-                                            <input id="username" name="username" placeholder="Username" class="form-control here" required="required" type="text" id="username">
+                                            <input id="username" name="username" placeholder="Username"
+                                                class="form-control here" required="required" type="text" id="username">
                                         </div>
                                     </div>
                                     <div class="form-group row">
                                         <label for="name" class="col-4 col-form-label">First Name</label>
                                         <div class="col-8">
-                                            <input id="name" name="name" placeholder="First Name" class="form-control here" type="text" id="fname">
+                                            <input id="name" name="name" placeholder="First Name"
+                                                class="form-control here" type="text" id="fname">
                                         </div>
                                     </div>
                                     <div class="form-group row">
                                         <label for="lastname" class="col-4 col-form-label">Last Name</label>
                                         <div class="col-8">
-                                            <input id="lastname" name="lastname" placeholder="Last Name" class="form-control here" type="text" id="lname">
+                                            <input id="lastname" name="lastname" placeholder="Last Name"
+                                                class="form-control here" type="text" id="lname">
                                         </div>
                                     </div>
 
                                     <div class="form-group row">
                                         <label for="email" class="col-4 col-form-label">Email*</label>
                                         <div class="col-8">
-                                            <input id="email" name="email" placeholder="Email" class="form-control here" required="required" type="text" id="email">
+                                            <input id="email" name="email" placeholder="Email" class="form-control here"
+                                                required="required" type="text" id="email">
                                         </div>
                                     </div>
 
                                     <div class="form-group row">
                                         <label for="password" class="col-4 col-form-label">Password</label>
                                         <div class="col-8">
-                                            <input id="password" name="password" placeholder="Password" class="form-control here" type="text">
+                                            <input id="password" name="password" placeholder="Password"
+                                                class="form-control here" type="password">
                                         </div>
                                     </div>
                                     <div class="form-group row">
                                         <div class="offset-4 col-8">
-                                            <button id="signInButton" name="submit" type="submit" class="btn btn-primary">Create My
+                                            <button id="signInButton" name="submit" type="submit"
+                                                class="btn btn-primary">Create My
                                                 Profile</button>
                                         </div>
                                     </div>
@@ -102,31 +119,34 @@
                                     <div class="form-group row">
                                         <label for="inputEmail" class="col-sm-2 col-form-label">Email</label>
                                         <div class="col-sm-10">
-                                            <input type="email" class="form-control" id="inputEmail" placeholder="Email">
+                                            <input type="email" class="form-control" id="inputEmail"
+                                                placeholder="Email">
                                         </div>
                                     </div>
                                     <div class="form-group row">
                                         <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
                                         <div class="col-sm-10">
-                                            <input type= "password" class="form-control" id="inputPassword3" placeholder="Password">
+                                            <input type="password" class="form-control" id="inputPassword3"
+                                                placeholder="Password">
                                         </div>
 
-                                       
+
 
                                         <div class="form-group row">
                                             <div class="col-sm-10">
-                                                <button type="submit" class="btn btn-primary" id="submitButton">Sign in</button>
+                                                <button type="submit" class="btn btn-primary" id="submitButton">Sign
+                                                    in</button>
                                             </div>
                                         </div>
                                 </form>
-                                </div>
                             </div>
-
                         </div>
+
                     </div>
                 </div>
             </div>
         </div>
+    </div>
 
     </div>
 
@@ -134,17 +154,18 @@
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="#"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                                          <span class="navbar-toggler-icon"></span>
-                                        </button>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
             <nav>
                 <div class="navbar">
                     <ul class="navbar-nav mr-auto justify-content-center">
                         <li class="nav-item active">
-                            <li class="nav-item">
-                                <a class="nav-link" href="/">Arielle Collins</a>
-                            </li>
-                            <a class="nav-link" href="/signup">April Long</a>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/">Arielle Collins</a>
+                        </li>
+                        <a class="nav-link" href="/signup">April Long</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/login">Tracy Pineda</a>
@@ -154,7 +175,10 @@
             </nav>
 
     </footer>
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="./js/signup.js"></script>
+
 </body>
 
 </html>
