--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -48,6 +48,8 @@ footer .footer {
   border: solid 1px #ccc7;
 }
 footer .center {
+  margin-left: auto;
+  margin-right: auto;
   text-align: center;
   position: center;
 }
