--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -49,6 +49,8 @@
          border: solid 1px #ccc7;
      }
      .center {
+         margin-left: auto;
+         margin-right: auto;
          text-align: center;
          position: center;
      }
