--- a/views/profile.html
+++ b/views/profile.html
@@ -78,8 +78,17 @@
                 </div>
                 <div class="form-group row">
                     <label for="category" class="col-sm-2 col-form-label">Category</label>
-                    <div class="col-sm-10">
-                        <input type="category" class="form-control" id="itemCategory" placeholder="Category">
+                    <div class="dropdown">
+                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                              Category
+                            </button>
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                            <button class="dropdown-item" type="button">Clothing & Accessories</button>
+                            <button class="dropdown-item" type="button">Home & Garden</button>
+                            <button class="dropdown-item" type="button">Electronics</button>
+                            <button class="dropdown-item" type="button">Toys</button>
+                            <button class="dropdown-item" type="button">Miscellaneous</button>
+                        </div>
                     </div>
                 </div>
                 <form>
@@ -118,26 +127,7 @@
                 </div>
             </form>
 
-
-
-
-
-
-
-
         </div>
-
-
-
-
-
-
-
-
-
-
-
-
     </div>
 
 
@@ -168,4 +158,4 @@
     </footer>
 </body>
 
-</html>
+</html>][
