--- a/views/signup.html
+++ b/views/signup.html
@@ -46,15 +46,15 @@
 
 
 
-    <div class="container">
+    <div class="container profile">
         <div class="row">
-            <div class="col-md-9">
-                <div class="card">
+            <div class="col-md-12">
+                <div class="card profile">
                     <div class="card-body">
                         <div class="row">
                             <div class="col-md-12">
-                                <h4>Your Profile</h4>
-                                <hr>
+                                <h2>Sign Up</h4>
+                                    <hr>
                             </div>
                         </div>
                         <div class="row">
@@ -89,16 +89,20 @@
                                     <div class="form-group row">
                                         <label for="newpass" class="col-4 col-form-label">New Password</label>
                                         <div class="col-8">
-                                            <input id="newpass" name="newpass" placeholder="New Password" class="form-control here" type="passwo">
+                                            <input id="newpass" name="newpass" placeholder="New Password" class="form-control here" type="password">
                                         </div>
                                     </div>
                                     <div class="form-group row">
                                         <div class="offset-4 col-8">
-                                            <button id="signInButton" name="submit" type="submit" class="btn btn-primary">Create My
+                                            <button id="createProfileButton" name="submit" type="submit" class="btn btn-primary">Create My
                                                 Profile</button>
                                         </div>
                                     </div>
-
+                                </form>
+                                <br>
+                                <h4>Sign In</h4>
+                                <hr>
+                                <form>
                                     <div class="form-group row">
                                         <label for="inputEmail" class="col-sm-2 col-form-label">Email</label>
                                         <div class="col-sm-10">
@@ -108,18 +112,12 @@
                                     <div class="form-group row">
                                         <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
                                         <div class="col-sm-10">
-<<<<<<< HEAD:views/signup.html
-                                            <input type= "password" class="form-control" id="inputPassword3" placeholder="Password">
-=======
-                                            <input type="password" class="form-control" id="inputPassword" placeholder="Password">
->>>>>>> test:public/signup.html
+                                            <input type="password" class="form-control current-password" id="inputPassword" placeholder="Password">
                                         </div>
 
-                                       
-
                                         <div class="form-group row">
-                                            <div class="col-sm-10">
-                                                <button type="submit" class="btn btn-primary" id="submitButton">Sign in</button>
+                                            <div class="col-12 offset-0">
+                                                <button id="signInButton" name="submit" type="submit" class="btn btn-primary">Sign In</button>
                                             </div>
                                         </div>
                                 </form>
