final commit before leaving class

--- a/views/profile.html
+++ b/views/profile.html
@@ -100,8 +100,10 @@
                 </form>
                 <div id="havewant">
                     <p>Item Type</p>
-                    <input type="radio" name="have" value="have"> Have<br>
-                    <input type="radio" name="want" value="want"> Want<br>
+                    <label for="have"> Have </label>
+                    <input id = "have" type="radio" name="havewant" value="have">
+                    <label for="want">Want</label>
+                    <input id = "want" type="radio" name="havewant" value="want">
                 </div>
                 <div class="form-group">
                     <label for="itemDescription">Item Description</label>
