end of the day changes

--- a/views/profile.html
+++ b/views/profile.html
@@ -15,7 +15,9 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link type="stylesheet" href="styles/style.sass">
     <title>Project Two</title>
 </head>
@@ -61,14 +63,15 @@
 
 
         <div class="card" style="width: 18rem;">
-            <img src="images/dummy-prod-1.jpg" class="card-img-top" alt="dummy-img">
+            <img src="images/image.webp" class="card-img-top" alt="dummy-img">
             <div class="card-body">
-                <h5 class="card-title">Username</h5>
-                <p class="card-text">Some stuff about the user.</p>
+                <h5 class="card-title">Doug Jones</h5>
+                <p class="card-text">Poor millennial looking to barter and not buy.
+                    Checkout my haves to see if you want to barter. </p>
             </div>
 
             <div class="card-body">
-                <a href="#" class="card-link">Haves</a>
+                <a href="barter" class="card-link">Haves</a>
                 <a href="#" class="card-link">Wants</a>
             </div>
         </div>
@@ -143,8 +146,7 @@
             </nav>
 
     </footer>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="./js/profile.js"></script>
