--- a/views/profile.html
+++ b/views/profile.html
@@ -83,6 +83,12 @@
 
 
             <form>
+                    <div class="form-group row">
+                            <label for="username" class="col-sm-2 col-form-label">Username</label>
+                            <div class="col-sm-10">
+                                <input type="username" class="form-control" id="username" placeholder="username">
+                            </div>
+                        </div>
                 <div class="form-group row">
                     <label for="itemName" class="col-sm-2 col-form-label">Item Name</label>
                     <div class="col-sm-10">
@@ -151,7 +157,7 @@
     
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <script src="./js/profile.js"></script>
+    <script src="./js/dashboard.js"></script>
 </body>
 
 </html>
