--- a/views/signup.html
+++ b/views/signup.html
@@ -79,10 +79,10 @@
                                         </div>
                                     </div>
                                     <div class="form-group row">
-                                        <label for="name" class="col-4 col-form-label">First Name</label>
+                                        <label for="firstname" class="col-4 col-form-label">First Name</label>
                                         <div class="col-8">
-                                            <input id="name" name="name" placeholder="First Name"
-                                                class="form-control here" type="text" id="fname">
+                                            <input id="firstname" name="firstname" placeholder="First Name"
+                                                class="form-control here" type="text" id="firstname">
                                         </div>
                                     </div>
                                     <div class="form-group row">
