--- a/views/profile.html
+++ b/views/profile.html
@@ -65,7 +65,7 @@
         <div class="card" style="width: 18rem;">
             <img src="images/image.webp" class="card-img-top" alt="dummy-img">
             <div class="card-body">
-                <h5 class="card-title">Doug Jones</h5>
+                <h5 id = "profilename" class="card-title">Doug Jones</h5>
                 <p class="card-text">Poor millennial looking to barter and not buy.
                     Checkout my haves to see if you want to barter. </p>
             </div>
@@ -84,9 +84,9 @@
 
             <form>
                     <div class="form-group row">
-                            <label for="username" class="col-sm-2 col-form-label">Username</label>
+                            <label for="UserId" class="col-sm-2 col-form-label">UserId</label>
                             <div class="col-sm-10">
-                                <input type="username" class="form-control" id="username" placeholder="username">
+                                <input type="UserId" class="form-control" id="UserId" placeholder="UserId">
                             </div>
                         </div>
                 <div class="form-group row">
