--- a/views/barter.html
+++ b/views/barter.html
@@ -11,16 +11,12 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/style.css">
     <title>Project Two</title>
+    <script src="js/auth.js"></script>
 </head>
 
 <body>
-
-
-
     <header class="persistent">
         <nav>
-
-
             <nav class="navbar navbar-expand-lg navbar-light justify-content-end">
                 <a class="navbar-brand" href="#"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -40,12 +36,16 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="/barter">Barter</a>
-                                <div class="search">
-                                    <button name="search" type="submit" class="btn btn-light">Search</button>
-                                    <insert class="textarea"></insert>
-                                </div>
-
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="search">
+                        <button name="search" type="submit" class="btn btn-light">Search</button>
+                        <insert class="textarea"></insert>
+                    </div>
                 </nav>
+            </nav>
+        </nav>
     </header>
 
     <div class="container">
@@ -126,15 +126,17 @@
             <nav>
                 <div class="navbar">
                     <ul class="navbar-nav mr-auto justify-content-center">
-                        <li class="nav-item active">
+                        <ul class="navbar-nav mr-auto justify-content-center">
                             <li class="nav-item">
-                                <a class="nav-link" href="/">Arielle Collins</a>
+                                <a class="nav-link" href="http://www.github.com/">Arielle Collins</a>
                             </li>
-                            <a class="nav-link" href="/signup">April Long</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/login">Tracy Pineda</a>
-                        </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="http://www.github.com/">April Long</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="http://www.github.com/">Tracy Pineda</a>
+                            </li>
+                        </ul>
                     </ul>
                 </div>
             </nav>
