--- a/views/index.html
+++ b/views/index.html
@@ -30,11 +30,7 @@
                             </li>
 
                             <li>
-                                <a class="nav-link" href="/signup"> Sign Up </a>
-                            </li>
-
-                            <li class="nav-item">
-                                <a class="nav-link" href="/login"> Login</a>
+                                <a class="nav-link" href="/signup"> Sign Up / Login </a>
                             </li>
 
                             <li class="nav-item">
