--- a/views/signup.html
+++ b/views/signup.html
@@ -29,14 +29,11 @@
                 <nav>
                     <div class="navbar">
                         <ul class="navbar-nav mr-auto">
-                            <li class="nav-item active">
-                                <li class="nav-item">
-                                    <a class="nav-link" href="/">Home</a>
-                                </li>
-                                <a class="nav-link" href="/signup">Sign Up</a>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/login">Login</a>
+                                <a class="nav-link" href="/signup">Sign Up / Login</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="/profile"> Profile</a>
@@ -85,7 +82,7 @@
                                     <div class="form-group row">
                                         <label for="email" class="col-4 col-form-label">Email*</label>
                                         <div class="col-8">
-                                            <input id="email" name="email" placeholder="Email" class="form-control here" required="required" type="text" id="email">
+                                            <input id="email" name="email" placeholder="Email" class="form-control here" required="required" type="text">
                                         </div>
                                     </div>
 
@@ -94,6 +91,12 @@
                                         <div class="col-8">
                                             <input id="password" name="password" placeholder="Password" class="form-control here" type="password">
 
+                                        </div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <label for="email" class="col-4 col-form-label">About Me</label>
+                                        <div class="col-8">
+                                            <input id="aboutMe" name="aboutMe" placeholder="About Me" class="form-control here" type="text">
                                         </div>
                                     </div>
                                     <div class="form-group row">
@@ -129,6 +132,7 @@
                                         </div>
 
                                     </div>
+
 
                                     <div class="form-group row">
                                         <div class="col-sm-4"></div>
