--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  background-color: whitesmoke;
+  background: #ccc7;
 }
 
 .persistent {
@@ -24,6 +24,7 @@ body {
   margin-top: none;
 }
 .container .card {
+  margin-top: 120px;
   border: solid 10px #9797a0;
   border: linear-gradient(360deg, #9797a0 0%, #f1f6f6 100%);
 }
@@ -35,6 +36,9 @@ body {
   transform: translatex(-50%);
 }
 
+footer {
+  margin-bottom: none;
+}
 footer .footer {
   width: 100%;
   line-height: 45px;
